# geospatial_dashboard

./: .gitignore  README.md  pyproject.toml
scr/: main.py
scr/assets/: style.css  style.py
scr/components/: app_variables.py  choropleth.py  constant_values.py  data_dropdown.py  dropdown_continents.py  dropdown_country.py  dropdown_year.py  footprint_histo.py  graph_figure.py  ids.py  layout.py  range_slider.py  subplots.py
