[project]
name = "geospatial-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.2",
    "pytest>=8.3.4",
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pycountry-convert>=0.7.2",
]

[tool.setuptools]
py-modules = ["scr"]

[tool.pytest.ini_options]
pythonpath = "scr"
